# ringfairy

./: .gitignore  Cargo.toml  README.md  config.json  ringfairy.toml  websites.json  websites.toml
.github/workflows/: build-cross.yml  ci.yml  release.yml
assets/: styles.css
data/assets/: styles.css
data/templates/: grid.html  index.html  list.html  list_template.html  random.html  redirect_template.html  template.html
src/: cli.rs  error.rs  file.rs  format_errors.rs  gen.rs  html.rs  http.rs  main.rs  webring.rs  website.rs
templates/: list_template.html  styles.css
webring/: list.html  styles.css
webring/gil/: next.html  previous.html
webring/kersed/: next.html  previous.html
