[package]
name = "ringfairy"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
futures = "0.3.30"
log = "0.4.20"
minify-html = "0.15"
rand = "0.8"
reqwest = "0.11.24"
scraper = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
tokio = { version = "1", features = ["full"] }
url = "2.5"

[profile.release]
lto = true
opt-level = 3
strip = true
debug = false
panic = "abort"
