[package]
name = "ringfairy"
version = "0.1.2"
edition = "2021"
authors = ["Kern AKA Kersed <human@kernespinoza.com>", "Shom Bandopadhaya <shom@bandopadhaya.com>"]
license = "GPL-3.0"
description = "Creates a webring by generating HTML files for a set of websites, linking them together."
readme = "README.md"
homepage = "https://github.com/k3rs3d/ringfairy"
repository = "https://github.com/k3rs3d/ringfairy"
documentation = "https://github.com/k3rs3d/ringfairy"
keywords = ["static-site", "webring", "smallweb", "indieweb"]
categories = ["command-line-utilities", "web-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
futures = "0.3.30"
log = "0.4.20"
minify-html = "0.15"
rand = "0.8"
reqwest = "0.11.24"
scraper = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
tokio = { version = "1", features = ["full"] }
url = "2.5"
opml = "1.1.6"
regex = "1.10.4"
lazy_static = "1.4.0"
toml = "0.8.13"

[profile.release]
lto = true
opt-level = 3
strip = true
debug = false
panic = "abort"
